NB update: Pinnned revision

--- a/01-strings_1.ipynb
+++ b/01-strings_1.ipynb
@@ -236,6 +236,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a80b13e5",
+   "metadata": {},
+   "source": [
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 1\" \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5555b83a",
    "metadata": {},
    "source": [
@@ -406,6 +415,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "801a0136",
+   "metadata": {},
+   "source": [
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 2\" \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7fc66329",
    "metadata": {},
    "source": [
@@ -454,6 +472,15 @@
    "outputs": [],
    "source": [
     "quote_2.replace(\"?\", \"\").replace(\"’\", \"\").replace(\",\", \"\").lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b82ceaf",
+   "metadata": {},
+   "source": [
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 3\" \n"
    ]
   }
  ],
