--- a/ch02.ipynb
+++ b/ch02.ipynb
@@ -241,7 +241,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 👉 Please save<font color='red'> **(ctrl-s or cmd-s)** </font> your file to make a checkpoint."
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 1\" \n"
    ]
   },
   {
@@ -513,7 +514,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 👉 Please save<font color='red'> **(ctrl-s or cmd-s)** </font> your file to make a checkpoint."
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 2\" \n"
    ]
   },
   {
@@ -774,7 +776,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 👉 Please save<font color='red'> **(ctrl-s or cmd-s)** </font> your file to make a checkpoint."
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 3\" \n"
    ]
   },
   {
@@ -1000,7 +1003,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 👉 Please save<font color='red'> **(ctrl-s or cmd-s)** </font> your file to make a checkpoint."
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 4\" \n"
    ]
   },
   {
@@ -1448,7 +1452,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 👉 Please save<font color='red'> **(ctrl-s or cmd-s)** </font> your file to make a checkpoint."
+    "## 👉 Please <font color='red'> **(ctrl-s or cmd-s)** save and \"pin revision\" </font> \n",
+    "## 👉 Rename the current pinned revision to \"Section 5\" \n"
    ]
   }
  ],
